--- a/conf/zinx.json
+++ b/conf/zinx.json
@@ -1,9 +1,10 @@
 {
     "Name":"Chisato",
     "Host":"127.0.0.1",
-    "TcpPort":7171,
+    "TcpPort":7172,
     "MaxConn":36,
     "WorkerPoolSize":36,
     "LogDir": "./mylog",
-    "LogFile":"zinx.log"
+    "LogFile":"zinx.log",
+    "MaxPacketSize":1048576
   }
